--- a/TYSONMedia-DiscordTheme-T5S.css
+++ b/TYSONMedia-DiscordTheme-T5S.css
@@ -3,9 +3,9 @@
  * @author T5S Development Team
  * @version 1.2 Alcontara
  * @description Made and Developed by Tyler Custine
- * @source https://tysonportal.my.canva.site/tcustard25
+ * @source https://github.com/TYSONTECH/t5stheme
  * @website https://tysonportal.my.canva.site/tcustard25
- * @invite dHaSxn3
+ * @invite YNHM48hfZy
  */
 /* IMPORT CSS */
 @import url("https://clearvision.github.io/ClearVision-v7/main.css");
