--- a/TYSONMedia-DiscordTheme-T5S.css
+++ b/TYSONMedia-DiscordTheme-T5S.css
@@ -63,13 +63,13 @@
 /* THEME SPECIFIC SHADING */
 /* LIGHT THEME */
 :is(.theme-light, .theme-dark .theme-light) {
-  --background-shading: rgba(252, 252, 252, 0.3); /* app background shading color [default: rgba(252, 252, 252, 0.3)] */
-  --card-shading: rgba(252, 252, 252, 0.3); /* cards background shading color [default: rgba(252, 252, 252, 0.3)] */
-  --popout-shading: rgba(252, 252, 252, 0.7); /* popouts background shading color [default: rgba(252, 252, 252, 0.7)] */
-  --modal-shading: rgba(252, 252, 252, 0.5); /* modals background shading color [default: rgba(0, 0, 0, 0.6)] */
+  --background-shading: rgba(80, 80, 80, 0.116); /* app background shading color [default: rgba(252, 252, 252, 0.3)] */
+  --card-shading: rgba(121, 121, 121, 0.171); /* cards background shading color [default: rgba(252, 252, 252, 0.3)] */
+  --popout-shading: rgba(121, 121, 121, 0.171); /* popouts background shading color [default: rgba(252, 252, 252, 0.7)] */
+  --modal-shading: rgba(252, 252, 252, 0.247); /* modals background shading color [default: rgba(0, 0, 0, 0.6)] */
   --input-shading: rgba(0, 0, 0, 0.3); /* inputs background shading color [default: rgba(0, 0, 0, 0.6)] */
-  --normal-text: #36363c; /* text color [default: #36363c] */
-  --muted-text: #75757e; /* muted text color [default: #75757e] */
+  --normal-text: #ffffff; /* text color [default: #36363c] */
+  --muted-text: #ffffff; /* muted text color [default: #75757e] */
 }
 
 /* ASH THEME */
